# HomeTimeline

./: .dockerignore  .env.example  .gitignore  AGENT.md  Makefile  README.md  codecov.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/api/: activity.py  app_settings.py  cameras.py  health.py  locations.py  logs.py  recordings.py  scanner.py  storage.py  timeline.py
app/models/: app_settings.py  base.py  camera.py  download_event.py  location.py  purge_event.py  recording.py  scan_event.py
app/schemas/: app_settings.py  camera.py  location.py  recording.py
app/services/: downloader.py  go2rtc.py  hikvision.py  log_buffer.py  purger.py  reconcile.py  scanner.py  storage.py  tz.py
app/workers/: scheduler.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.test.yml  docker-compose.yml
docs/: DESIGN.md  product_requirements.md  ui_improvement_plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
scripts/: deploy.py  deploy.sh  hot_patch.sh
tests/: asserts.py  conftest.py
tests/e2e/: conftest.py  test_cameras.py  test_dashboard.py  test_e2e.py  test_settings.py
tests/integration/: test_activity_api.py  test_app_settings_api.py  test_cameras_api.py  test_cors.py  test_health_api.py  test_locations_api.py  test_logs_api.py  test_recordings_api.py  test_scanner_api.py  test_storage_api.py  test_timeline_api.py
tests/unit/: test_config.py  test_main.py  (+11 more)
(+73 files in other folders)
