[project]
name = "camera-event-manager"
version = "0.1.0"
requires-python = ">=3.13"

[project.optional-dependencies]
prod = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "peewee>=3.17",
    "peewee-migrate>=1.12",
    "pydantic-settings>=2.6",
    "ffmpeg-python>=0.2",
    "watchdog>=6.0",
    "apscheduler>=3.10",
    "aiofiles>=24.1",
    "aiohttp>=3.10.2",
    "python-multipart>=0.0.12",
]

dev = [
    "camera-event-manager[prod]",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "playwright>=1.48",
    "pytest-playwright>=0.5",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/templates/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP017"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
